# biome-fm

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: code-reviewer.md  doc-keeper.md  senior-architect.md  senior-developer.md  workflow.md
.claude/skills/: pyside6-patterns.md  testing-tdd.md  vfs-architecture.md
AI/: architecture.md
Research/: SUMMARY.md
docs/: cli-installer.md  configuration.md  keyboard-shortcuts.md  plugins.md  search.md  sync.md
scripts/: biome-fm.fish  biome-fm.sh
src/biome_fm/: __init__.py  __main__.py  app.py  config.py  event_bus.py  panel_manager.py  qt.py  session.py
tests/: conftest.py
tests/integration/: test_action_bar.py  test_ai_chat_panel.py  test_ai_context_dialog.py  test_ai_rename_dialog.py  test_archive_context.py  test_batch_rename_dialog.py  test_bookmark_dialog.py  test_bookmark_dialog_tree.py  test_bookmark_menu.py  test_bookmark_menu_tree.py  test_breadcrumb_autocomplete.py  test_breadcrumb_bar.py  test_breadcrumb_drop.py  test_breadcrumb_siblings.py  test_chat_links.py  test_chat_markdown.py  test_checksum_dialog.py  test_cloud_profile_dialog.py  test_column_visibility.py  test_command_palette.py  test_commands_filesystem.py  test_confirm_dialog.py  test_conflict_dialog.py  test_copy_move_dialog.py  test_copy_names.py  test_copy_path.py  test_cross_vfs_extraction.py  test_dir_tree_panel.py  test_directory_model.py  test_directory_model_dnd.py  test_dnd_utils.py  test_duplicate_dialog.py  test_editor_dialog.py  test_editor_find.py  test_enter_key_action.py  test_ext_colors.py  (+78 more)
(+694 files in other folders)
