[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biome-fm"
version = "0.1.0"
description = "AI-powered cross-platform dual-pane file manager"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "German Krasnikov", email = "german.krasnikov@gmail.com" }]

dependencies = [
    "PySide6>=6.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.5",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "pyfakefs>=5.6",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
ai = [
    "anthropic>=0.30",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
]
perf = [
    "scandir-rs>=2.7",
    "xxhash>=3.4",
    "watchfiles>=0.22",
    "blake3>=0.4",
]

[project.scripts]
biome-fm = "biome_fm.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
qt_api = "pyside6"
addopts = "--strict-markers -q"
markers = [
    "slow: marks tests as slow",
    "integration: requires real filesystem",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.coverage.run]
source = ["src/biome_fm"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
